--- a/src/App.scss
+++ b/src/App.scss
@@ -1,39 +1,39 @@
 :root {
-  --black:#111;
-  --black-secondary:#333333;
-  --grey:#BBBBBB;
-  --green:#00FFA7;
-  --white:#fff;
-  --dark-secondary:#747474;
+  --black: #111;
+  --black-secondary: #333333;
+  --grey: #bbbbbb;
+  --green: #00ffa7;
+  --white: #fff;
+  --dark-secondary: #747474;
 }
 
-*{
+* {
   box-sizing: border-box;
 }
 body {
   background-color: #000;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.header{
+.header {
   background-color: var(--black);
   padding: 16px;
 }
-.loading{
+.loading {
   font-size: 40px;
   color: white;
 }
-.content--wrapper{
+.content--wrapper {
   margin: 0 auto;
   width: 100%;
   max-width: 660px;
 }
-.filter{
-  border: none  ;
+.filter {
+  border: none;
   width: 100%;
   border-radius: 8px;
   background-color: var(--black-secondary);
@@ -42,8 +42,8 @@ body {
   font-size: 18px;
   line-height: 22px;
 }
-.main{
-  padding:20px;
+.main {
+  padding: 20px;
   height: calc(100vh - 160px);
 }
 .card {
@@ -72,55 +72,53 @@ body {
     text-align: center;
   }
 }
-.list{
+.list {
   margin: 0;
   padding: 0;
   display: flex;
   gap: 20px;
   flex-wrap: wrap;
 }
-.switch{
-
+.switch {
   cursor: pointer;
-  border:none;
-  background-color:var(--dark-secondary);
+  border: none;
+  background-color: var(--dark-secondary);
   border-radius: 15px;
   width: 40px;
   padding: 2px;
-  transition: .2s background-color ease-in-out;
+  transition: 0.2s background-color ease-in-out;
   margin-left: 20px;
   &.active {
     background-color: var(--green);
 
-    .switch-knob{
+    .switch-knob {
       transform: translateX(20px);
     }
   }
-  &-knob{
-    transition: .2s transform ease-in-out;
+  &-knob {
+    transition: 0.2s transform ease-in-out;
     background-color: white;
     width: 16px;
     height: 16px;
     border-radius: 50%;
-
   }
 }
-.footer{
+.footer {
   padding: 30px;
   display: flex;
   justify-content: space-between;
   align-content: center;
   font-size: 16px;
   line-height: 19px;
-  color: #BBBBBB;
+  color: #bbbbbb;
   background-color: var(--black);
 }
 
-.height{
+.height {
   color: white;
   font-weight: 700;
 }
-.box{
+.box {
   display: flex;
   justify-content: space-between;
   align-content: center;
