--- a/src/App.scss
+++ b/src/App.scss
@@ -27,7 +27,7 @@ body {
   font-size: 40px;
   color: white;
 }
-.content--wrapper {
+.content-wrapper {
   margin: 0 auto;
   width: 100%;
   max-width: 660px;
