--- a/src/App.scss
+++ b/src/App.scss
@@ -25,7 +25,7 @@ body {
 }
 .loading {
   font-size: 40px;
-  color: white;
+  color: var(--white);
 }
 .content-wrapper {
   margin: 0 auto;
@@ -97,7 +97,7 @@ body {
   }
   &-knob {
     transition: 0.2s transform ease-in-out;
-    background-color: white;
+    background-color: var(--white);
     width: 16px;
     height: 16px;
     border-radius: 50%;
@@ -114,7 +114,7 @@ body {
   background-color: var(--black);
 }
 .height {
-  color: white;
+  color: var(--white);
   font-weight: 700;
 }
 .box {
