--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,15 @@
   --white: #fff;
   --dark-secondary: #747474;
 }
-[data-theme="white"] {
+html[data-theme="white"] {
+  --primary: #f2f2f2f2;
+  --primary-lighter: #878787;
+  --grey: #bbbbbb;
+  --green: #00ffa7;
+  --white: #000;
+  --dark-secondary: #747474;
+}
+html[data-theme="dark"] {
   --primary: #111;
   --primary-lighter: #333333;
   --grey: #bbbbbb;
