feat: add pagination

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,7 @@
   --white: #fff;
   --dark-secondary: #747474;
 }
-html[data-theme="white"] {
+html[data-theme='white'] {
   --primary: #f2f2f2f2;
   --primary-lighter: #878787;
   --grey: #bbbbbb;
@@ -14,7 +14,7 @@ html[data-theme="white"] {
   --white: #000;
   --dark-secondary: #747474;
 }
-html[data-theme="dark"] {
+html[data-theme='dark'] {
   --primary: #111;
   --primary-lighter: #333333;
   --grey: #bbbbbb;
@@ -59,7 +59,7 @@ body {
 }
 .main {
   padding: 20px;
-  height: calc(100vh - 160px);
+  height: calc(100vh - 222px);
 }
 .card {
   width: 150px;
@@ -85,6 +85,9 @@ body {
     background-color: #222;
     padding: 35px 29px;
     text-align: center;
+  }
+  &-span{
+    font-size: 14px;
   }
 }
 .list {
@@ -137,13 +140,67 @@ body {
   justify-content: space-between;
   align-content: center;
 }
-.btn{
-    background-color: var(--white);
-    border: none;
-    border-radius: 8px;
-    padding: 10px;
-    color: var(--primary);
-    font-size: 16px;
-    line-height: 19px;
+.btn {
+  background-color: var(--primary-lighter);
+  border: none;
+  border-radius: 8px;
+  padding: 10px;
+  font-weight: 600;
+  color: var(--grey);
+  font-size: 16px;
+  line-height: 19px;
+  cursor: pointer;
+  transition: 0.2s background-color ease-in-out;
+  &.disabled {
+    cursor: not-allowed;
+  }
+  &:hover {
+    background-color: var(--dark-secondary);
+  }
+}
+.pagination {
+  width: 420px;
+  display: flex;
+  padding: 0;
+  justify-content: space-between;
+  align-content: center;
+  font-size: 16px;
+  line-height: 19px;
+  color: #bbbbbb;
+  list-style: none;
+  gap: 10px;
+  align-items: center;
+  margin: 0 auto 20px;
+
+  .link {
+    font-size: 14px;
     cursor: pointer;
+    border: none;
+    background-color: var(--dark-secondary);
+    border-radius: 15px;
+    width: 27px;
+    height: 27px;
+    padding: 5px 10px;
+    transition: 0.2s background-color ease-in-out;
+    font-weight: 600;
+    &:hover {
+      color: var(--primary);
+      background-color: var(--green);
+    }
+    &.active {
+      background-color: var(--green);
+      color: var(--primary);
+    }
+    &-knob {
+      transition: 0.2s transform ease-in-out;
+      background-color: var(--white);
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+    }
+  }
+  @media only screen and (max-width: 420px) {
+    width: 300px;
+    gap: 5px;
+  }
 }
